massage overflow (not solved)

--- a/public/css/panel.css
+++ b/public/css/panel.css
@@ -96,7 +96,7 @@ button:hover{
 
 .chat{
     text-decoration: none;
-    height: 100%;
+    height: 97%;
     overflow: auto;
 }
 
@@ -108,17 +108,18 @@ button:hover{
     max-width: 90%;
     border-radius: 5px;
     background-color: #28274b;
+    text-overflow:ellipsis;
 }
 .self{
     background-color: #17172b;
     /* position: absolute;
     right: 20px; */
     margin-left: auto;
-    max-width: 40%;
+    /* max-width: 40%; */
 }
 ::-webkit-scrollbar-track
 {
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	/* -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); */
 	background-color: #f5f5f5;
 	border-radius: 10px;
 }
@@ -164,4 +165,18 @@ textarea{
 }
 textarea:focus{
     outline: none;
+}
+.lastmassage{
+    width: 40%;
+    white-space: nowrap; 
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: inline;
+    align-self: baseline;
+}
+.sendername{
+    width: max-content;
+}
+.lastmassageandsender{
+    display: flex;
 }
